--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,11 @@ button {
   border-radius: 10px;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
 .main-container {
   width: 100vw; height: 100vh;
   overflow-x: hidden;
@@ -85,11 +90,9 @@ button {
 
 .ingredients {
   text-align: left;
-  padding: 0;
-  list-style-type: none;
 }
 
-.link {
+.link, a {
   text-decoration: none;
   color: #111;
 }
