--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-h2, h3 {
+h2, h3, h4, h5 {
   margin: 0;
 }
 
@@ -124,7 +124,16 @@ ul {
   right: 60px; top: 30px;
 }
 
-
 .notes {
   margin-bottom: 20px;
+}
+
+.favorite-recipes-container {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 10px;
+}
+
+.notes-container {
+  text-align: left;
 }
