--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -164,8 +164,20 @@ img {
   overflow-x: hidden;
 }
 
+.center-flex {
+  width: 100%;
+  height: auto; min-height: 100vh;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  background-color: #e4fed7;
+}
+
 .body-container {
+  max-width: 1440px;
+  height: auto; min-height: 100vh;
   padding: 20px;
+  background-color: #fff;
 }
 
 .generic {
@@ -192,8 +204,8 @@ img {
 
 button:hover,
 .recipe:hover {
-  box-shadow: 0 0 10px #01010150;
-  outline: 1px solid #01010150;
+  box-shadow: 0 0 10px #489820;
+  outline: 1px solid #489820;
   cursor: pointer;
 }
 
@@ -245,6 +257,10 @@ a {
   color: #111;
 }
 
+  a:hover {
+    color: #489820;
+  }
+
 .icon {
   width: 20px;
   height: 20px;
@@ -289,4 +305,20 @@ a {
 
 .notes-container {
   text-align: left;
+}
+
+@media only screen and (min-width: 992px) {
+  .full-recipe {
+    max-width: 100%;
+    display: grid;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .recipe-title { grid-area: 1 / 2 / 2 / 4; }
+    .recipe-img-container { grid-area: 2 / 1 / 3 / 2; }
+    .recipe-ingredients { grid-area: 2 / 2 / 3 / 4; }
+    .recipe-instructions { grid-area: 3 / 2 / 4 / 4; }
+    .recipe-notes { grid-area: 4 / 2 / 5 / 4; }
+    .recipe-action-btn { grid-area: 5 / 2 / 6 / 4; }
 }
