--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -165,7 +165,7 @@ img {
 }
 
 .center-flex {
-  width: 100%;
+  width: 100vw;
   height: auto; min-height: 100vh;
   display: flex;
   flex-flow: column wrap;
@@ -174,6 +174,7 @@ img {
 }
 
 .body-container {
+  width: 100vw;
   max-width: 1440px;
   height: auto; min-height: 100vh;
   padding: 20px;
