--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,7 @@ button {
 }
 
 .btn-action {
-  background-color: #489820;
+  background-color: rgb(72, 152, 32);
   border: 1px solid white;
   border-radius: 1.5rem;
   color: white;
@@ -30,8 +30,8 @@ button {
 
 .btn-action:hover {
   background-color: white;
-  border: 1px solid #489820;
-  color: #489820;
+  border: 1px solid rgb(72, 152, 32);
+  color: rgb(72, 152, 32);
 }
 
 ul {
@@ -45,7 +45,6 @@ img {
 
 .h1-title {
   font-size: 2.5rem;
-  /* mq 3.5rem */
 }
 
 @media only screen and (min-width: 992px) {
@@ -69,7 +68,7 @@ img {
 }
 .font-lobster {
   font-family: "Lobster", sans-serif;
-  color: #489820;
+  color: rgb(72, 152, 32);
 }
 
 .navbar-brand {
@@ -77,7 +76,7 @@ img {
 }
 
 .navbar-brand:hover {
-  color: #489820;
+  color: rgb(72, 152, 32);
 }
 
 .carousel img {
@@ -91,8 +90,8 @@ img {
 }
 
 .section-quote {
-  background-color: #e4fed7;
-  color: #489820;
+  background-color: rgb(228, 254, 215);
+  color: rgb(72, 152, 32);
   padding: 4rem 2rem;
 }
 
@@ -124,13 +123,13 @@ img {
 
 .research-hr {
   width: 100px;
-  background-color: #489820;
+  background-color: rgb(72, 152, 32);
   height: 4px;
   margin: 1rem 0 2rem 0;
 }
 
 .nav-link {
-  color: #489820;
+  color: rgb(72, 152, 32);
 }
 
 .nav-link:hover {
@@ -140,7 +139,7 @@ img {
 .form {
   width: fit-content;
   padding: 4rem 3rem;
-  background-color: #e4fed7;
+  background-color: rgb(228, 254, 215);
   border-radius: 1rem;
 }
 
@@ -168,7 +167,7 @@ img {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  background-color: #e4fed7;
+  background-color: rgb(228, 254, 215);
 }
 
 .body-container {
@@ -204,8 +203,8 @@ img {
 
 button:hover,
 .recipe:hover {
-  box-shadow: 0 0 10px #489820;
-  outline: 1px solid #489820;
+  box-shadow: 0 0 10px rgb(72, 152, 32);
+  outline: 1px solid rgb(72, 152, 32);
   cursor: pointer;
 }
 
@@ -258,7 +257,7 @@ a {
 }
 
 a:hover {
-  color: #489820;
+  color: rgb(72, 152, 32);
 }
 
 .icon {
