--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster");
+@import "colors";
+
 h1 {
   padding-bottom: 2rem;
 }
@@ -18,7 +20,7 @@ button {
 }
 
 .btn-action {
-  background-color: #489820;
+  background-color: $primary-color;
   border: 1px solid white;
   border-radius: 1.5rem;
   color: white;
@@ -30,8 +32,8 @@ button {
 
 .btn-action:hover {
   background-color: white;
-  border: 1px solid #489820;
-  color: #489820;
+  border: 1px solid $primary-color;
+  color: $primary-color;
 }
 
 ul {
@@ -45,7 +47,6 @@ img {
 
 .h1-title {
   font-size: 2.5rem;
-  /* mq 3.5rem */
 }
 
 @media only screen and (min-width: 992px) {
@@ -71,7 +72,7 @@ img {
 
 .font-lobster {
   font-family: "Lobster", sans-serif;
-  color: #489820;
+  color: $primary-color;
 }
 
 .navbar-brand {
@@ -79,7 +80,7 @@ img {
 }
 
 .navbar-brand:hover {
-  color: #489820;
+  color: $primary-color;
 }
 
 .carousel img {
@@ -93,8 +94,8 @@ img {
 }
 
 .section-quote {
-  background-color: #e4fed7;
-  color: #489820;
+  background-color: $secondary-color;
+  color: $primary-color;
   padding: 4rem 2rem;
 }
 
@@ -127,13 +128,13 @@ img {
 
 .research-hr {
   width: 100px;
-  background-color: #489820;
+  background-color: $primary-color;
   height: 4px;
   margin: 1rem 0 2rem 0;
 }
 
 .nav-link {
-  color: #489820;
+  color: $primary-color;
 }
 
 .nav-link:hover {
@@ -143,7 +144,7 @@ img {
 .form {
   width: fit-content;
   padding: 4rem 3rem;
-  background-color: #e4fed7;
+  background-color: $secondary-color;
   border-radius: 1rem;
 }
 
@@ -171,7 +172,7 @@ img {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  background-color: #e4fed7;
+  background-color: $secondary-color;
 }
 
 .body-container {
@@ -207,8 +208,8 @@ img {
 
 button:hover,
 .recipe:hover {
-  box-shadow: 0 0 10px #489820;
-  outline: 1px solid #489820;
+  box-shadow: 0 0 10px $primary-color;
+  outline: 1px solid $primary-color;
   cursor: pointer;
 }
 
@@ -261,7 +262,7 @@ a {
 }
 
 a:hover {
-  color: #489820;
+  color: $primary-color;
 }
 
 .icon {
