--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster");
 @import "colors";
+@import "mixins";
 
 h1 {
   padding-bottom: 2rem;
@@ -17,6 +18,7 @@ button {
   background-color: #ebebeb;
   border: none;
   border-radius: 10px;
+  @include transition;
 }
 
 .btn-action {
@@ -28,6 +30,7 @@ button {
   margin: 1rem 1rem 0 0;
   display: inline-block;
   width: 150px;
+  @include transition;
 }
 
 .btn-action:hover {
@@ -49,7 +52,7 @@ img {
   font-size: 2.5rem;
 }
 
-@media only screen and (min-width: 992px) {
+@include media-min($mq-medium) {
   .h1-title {
     font-size: 3.5rem;
   }
@@ -64,7 +67,7 @@ img {
   font-size: 1.25rem;
 }
 
-@media only screen and (min-width: 992px) {
+@include media-min($mq-medium) {
   .home-info p {
     width: 55%;
   }
@@ -115,7 +118,7 @@ img {
   width: 100%;
 }
 
-@media only screen and (min-width: 992px) {
+@include media-min($mq-medium) {
   .section-research p {
     width: 55%;
   }
@@ -135,6 +138,7 @@ img {
 
 .nav-link {
   color: $primary-color;
+  @include transition;
 }
 
 .nav-link:hover {
@@ -204,6 +208,7 @@ img {
   padding: 10px;
   text-align: center;
   background-color: #ebebeb;
+  @include transition;
 }
 
 button:hover,
@@ -259,6 +264,7 @@ button:hover,
 a {
   text-decoration: none;
   color: #111;
+  @include transition;
 }
 
 a:hover {
@@ -283,6 +289,7 @@ a:hover {
   font-size: 1.5rem;
   right: 30px;
   top: 30px;
+  @include transition;
 }
 
 .favorite,
@@ -317,7 +324,7 @@ a:hover {
   margin-top: 40px;
 }
 
-@media only screen and (min-width: 992px) {
+@include media-min($mq-medium) {
   .full-recipe {
     max-width: 100%;
     display: grid;
