--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster");
+@import url("https://fonts.googleapis.com/css?family=Lora");
+@import url("https://fonts.googleapis.com/css?family=Inter");
 @import "colors";
 @import "mixins";
+@import "typography";
 
 h1 {
   padding-bottom: 2rem;
@@ -73,8 +76,8 @@ img {
   }
 }
 
-.font-lobster {
-  font-family: "Lobster", sans-serif;
+.font-alt {
+  font-family: $font-alt;
   color: $primary-color;
 }
 
