--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -283,8 +283,10 @@ a:hover {
 .icon {
   width: 20px;
   height: 20px;
-  line-height: 1rem;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   font-size: 1rem;
   position: absolute;
   right: 60px;
@@ -295,7 +297,7 @@ a:hover {
 }
 
 .star {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   right: 30px;
   top: 30px;
   transition: all 0.3s ease-in-out;
