--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -277,8 +277,10 @@ a:hover {
 .icon {
   width: 20px;
   height: 20px;
-  line-height: 1rem;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   font-size: 1rem;
   position: absolute;
   right: 60px;
@@ -289,7 +291,7 @@ a:hover {
 }
 
 .star {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   right: 30px;
   top: 30px;
   @include transition;
